--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,15 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
-.env*.local
+# env files
+.env
 
 # typescript
 *.tsbuildinfo
+
+# programdata
+%ProgramData%
+
+# server/.env
+server/.env
+server/.env
